syntax = "proto3";

import  "google/protobuf/timestamp.proto";
import  "google/protobuf/empty.proto";

package pb;

option go_package = "github.com/haa-criticals/watcher/app/grpc/pb";

message RegisterRequest {
    string address = 1;
    string key = 2;
}

message Node {
    string address = 1;
    string id = 2;
}

message RegisterResponse {
    bool success = 1;
    string id = 2;
    repeated Node nodes = 3;
}

message Beat {
    google.protobuf.Timestamp timestamp = 3;
}

service Watcher {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc AckNode(Node) returns (Node) {}
    rpc Heartbeat(Beat) returns (google.protobuf.Empty) {}
}
